--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -74,6 +74,10 @@
 
 /* ################# MEDIUM DEVICES ################# */
 @media screen and (max-width: 1024px) {
+  #about {
+    margin-top: 5%;
+  }
+
   .about__container {
     grid-template-columns: 1fr;
     gap: 0;
