--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -27,7 +27,7 @@ header {
   align-items: center;
   gap: 0.8rem;
   position: absolute;
-  left: 0;
+  left: 2%;
   bottom: 3rem;
 }
 
@@ -41,7 +41,8 @@ header {
 .me {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
-  height: 30rem;
+
+  /* height: 30rem; */
   position: absolute;
   left: calc(50% - 11rem);
   margin-top: 4rem;
@@ -53,7 +54,7 @@ header {
 /* ################## SCROLL DOWN ################# */
 .scroll__down {
   position: absolute;
-  right: -2.3rem;
+  right: -1.3rem;
   bottom: 5rem;
   transform: rotate(90deg);
   font-weight: 300;
@@ -63,14 +64,15 @@ header {
 /* ################# MEDIUM DEVICES ################# */
 @media screen and (max-width: 1024px) {
   header {
-    height: 64vh;
+    height: 68vh;
+    margin-bottom: 10rem;
   }
 }
 
 /* ################# SMALL DEVICES ################# */
 @media screen and (max-width: 600px) {
   header {
-    height: 100vh;
+    height: 73vh;
   }
 
   .header_socials,
@@ -88,5 +90,9 @@ header {
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 4rem 1.5rem;
+  }
+
+  .scroll__down {
+    margin-right: 2%;
   }
 }
