added update base on reviewer request

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -72,7 +72,8 @@ header {
 /* ################# SMALL DEVICES ################# */
 @media screen and (max-width: 600px) {
   header {
-    height: 73vh;
+    height: 80vh;
+    margin-bottom: 14rem;
   }
 
   .header_socials,
